--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <footer>
-        © 2025 Sharnbasva University Canteen
+      <p>&copy; 2025 Suresh Sherikar. Licensed under the <a href="./LICENSE" target="_blank">MIT License</a>.</p>
     </footer>
 
     <script src="js/script.js"></script>
